ISIS-2841: commons: use @NonNull to replace _With#requires
also batch format order 'final @NonNull'